# TLP-HPCA30-artifact

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.ChampSim  README.md  citation.cff
SimPoints/: tuple_generation.py
SimPoints/400.perlbench/: concat.txt
SimPoints/401.bzip2/: concat.txt
SimPoints/403.gcc/: concat.txt
SimPoints/410.bwaves/: concat.txt
SimPoints/416.gamess/: concat.txt
SimPoints/429.mcf/: concat.txt
SimPoints/433.milc/: concat.txt
SimPoints/434.zeusmp/: concat.txt
SimPoints/435.gromacs/: concat.txt
SimPoints/436.cactusADM/: concat.txt
SimPoints/437.leslie3d/: concat.txt
SimPoints/444.namd/: concat.txt
SimPoints/445.gobmk/: concat.txt
SimPoints/447.dealII/: concat.txt
SimPoints/450.soplex/: concat.txt
SimPoints/453.povray/: concat.txt
SimPoints/454.calculix/: concat.txt
SimPoints/456.hmmer/: concat.txt
SimPoints/458.sjeng/: concat.txt
SimPoints/459.GemsFDTD/: concat.txt
SimPoints/462.libquantum/: concat.txt
SimPoints/464.h264ref/: concat.txt
SimPoints/465.tonto/: concat.txt
champsim_parser/: config_parser.py  parser.py  result_parsers.py
cmake/: cpu_config.cmake
config/: .baseline_cascade_lake_hermes_o_l1d_perceptron_pc_paddr_pp_filter_popet_features.json.swp  .baseline_cascade_lake_l1d_iso_36kb.json.swp  base_champsim_sdc.json  baseline.json  baseline_alder_lake_dcl_oracle.json  baseline_alder_lake_hermes_o_locmap_perfect.json  baseline_cascade_lake l1d_berti.json  baseline_cascade_lake l1d_ipcp.json  baseline_cascade_lake l1d_next_line.json  baseline_cascade_lake.json  baseline_cascade_lake_2MB_pages.json  baseline_cascade_lake_2_cores.json  baseline_cascade_lake_2_cores_isolation.json  baseline_cascade_lake_2_cores_sdc_8kb.json  baseline_cascade_lake_2_cores_sdc_8kb_isolation.json  baseline_cascade_lake_4_cores.json  baseline_cascade_lake_4_cores_berti_800mtps_isolation.json  baseline_cascade_lake_4_cores_berti_block_prefs_800mtps.json  baseline_cascade_lake_4_cores_berti_hermes_o_spp_ppf_800mtps.json  baseline_cascade_lake_4_cores_berti_hermes_o_spp_ppf_800mtps_isolation.json  baseline_cascade_lake_4_cores_berti_iso_800mtps.json  baseline_cascade_lake_4_cores_berti_iso_800mtps_isolation.json  baseline_cascade_lake_4_cores_bimodal_classic_tlp_ipcp_800mtps.json  baseline_cascade_lake_4_cores_bimodal_classic_tlp_ipcp_800mtps_isolation.json  baseline_cascade_lake_4_cores_bimodal_hermes_o_berti_800mtps.json  baseline_cascade_lake_4_cores_bimodal_tlp_berti_800mtps.json  baseline_cascade_lake_4_cores_bimodal_tlp_ipcp_400mtps.json  baseline_cascade_lake_4_cores_bimodal_tlp_ipcp_spp_ppf_800mtps.json  baseline_cascade_lake_4_cores_bimodal_tlp_ipcp_spp_ppf_800mtps_isolation.json  baseline_cascade_lake_4_cores_delayed_hermes_o_berti_800mtps.json  baseline_cascade_lake_4_cores_delayed_hermes_o_ipcp_800mtps.json  baseline_cascade_lake_4_cores_distill_cache.json  baseline_cascade_lake_4_cores_distill_cache_ipcp.json  baseline_cascade_lake_4_cores_distill_cache_ipcp_isolation.json  baseline_cascade_lake_4_cores_distill_cache_isolation.json  baseline_cascade_lake_4_cores_distill_cache_next_line.json  baseline_cascade_lake_4_cores_distill_cache_next_line_isolation.json  baseline_cascade_lake_4_cores_double_llc.json  baseline_cascade_lake_4_cores_double_llc_ipcp.json  baseline_cascade_lake_4_cores_double_llc_ipcp_isolation.json  (+502 more)
notebooks/: README.md  single_core.ipynb  single_core.py
scripts/: README.md  compile_single_core.sh  install_dependencies.sh  run_single_core.job  run_single_core.sh  run_single_core_legacy.sh
src/internals/: CMakeLists.txt  base_replacement.cc  block.cc  block.h  cache.cc  cache.h  champsim.cc  champsim.h  dram_controller.cc  dram_controller.h  instruction.h  instruction_reader.hh  instructions.cc  ooo_cpu.cc  ooo_cpu.h  simulator.cc  simulator.hh  uncore.cc  uncore.h
src/internals/components/: cache.cc  cache.hh  distill_cache_loc_dead_block_predictor.cc  distill_cache_loc_dead_block_predictor.hh  distill_cache_woc_sampler.cc  distill_cache_woc_sampler.hh  dram_controller.cc  dram_controller.hh  irreg_access_pred.cc  irreg_access_pred.hh  lmp.cc  lmp.hh  memory_enums.cc  memory_enums.hh  memory_system.cc  memory_system.hh  miss_map.cc  miss_map.hh  offchip_pred_perc.cc  offchip_pred_perc.hh  routing_engine.cc  routing_engine.hh  sectored_cache.cc  sectored_cache.hh
src/internals/policies/: fill_path_policies.cc  fill_path_policies.hh
src/internals/prefetchers/: iprefetcher.hh
src/internals/replacements/: ireplacementpolicy.hh
src/plugins/prefetchers/l1d_berti/: CMakeLists.txt  helpers.hh
src/plugins/prefetchers/l1d_berti_iso/: CMakeLists.txt  helpers.cc  helpers.hh  l1d_berti.cc  l1d_berti.hh
src/plugins/prefetchers/l1d_ip_stride/: CMakeLists.txt  l1d_ip_stride.cc  l1d_ip_stride.hh
src/plugins/prefetchers/l1d_next_line/: CMakeLists.txt  l1d_next_line.cc  l1d_next_line.hh
src/plugins/prefetchers/l2c_spp/: CMakeLists.txt  details.cc  details.hh  l2c_spp.cc  l2c_spp.hh
src/plugins/prefetchers/l2c_spp_ppf/: CMakeLists.txt  l2c_spp_ppf.cc  l2c_spp_ppf.hh  ppf.cc  ppf.h
src/plugins/prefetchers/sdc_next_line/: CMakeLists.txt  sdc_next_line.cc  sdc_next_line.hh
src/plugins/replacements/l1d_lru/: CMakeLists.txt  l1d_lru.cc  l1d_lru.hh
src/plugins/replacements/l1i_lru/: CMakeLists.txt  l1i_lru.cc  l1i_lru.hh
src/plugins/replacements/l2c_lru/: CMakeLists.txt  l2c_lru.cc  l2c_lru.hh
src/plugins/replacements/llc_drrip/: CMakeLists.txt  llc_drrip.cc  llc_drrip.hh
src/plugins/replacements/llc_lru/: CMakeLists.txt  llc_lru.cc  llc_lru.hh
src/plugins/replacements/llc_srrip/: CMakeLists.txt  llc_srrip.cc  llc_srrip.hh
src/plugins/replacements/llc_topt/: CMakeLists.txt  benchmark.h  command_line.h  graph.h  llc_topt.cc  llc_topt.hh
src/plugins/replacements/sdc_lru/: CMakeLists.txt  sdc_lru.cc  sdc_lru.hh
src/plugins/replacements/sdc_random/: CMakeLists.txt  sdc_random.cc  sdc_random.hh
src/plugins/replacements/sdc_srrip/: CMakeLists.txt  sdc_srrip.cc  sdc_srrip.hh
src/tools/topt_tracer/: CMakeLists.txt
src/tools/topt_tracer/src/: main.cc  trace_utils.cc  trace_utils.hh
(+1444 files in other folders)
